[package]
name = "csbindgen"
version = "1.0.0"
edition = "2021"
authors = [
  "Yoshifumi Kawai <ils@neue.cc>",
  "Cysharp, Inc."
]
description = "Generate C# FFI from Rust for brings C native library to .NET and Unity easily."
keywords = ["bindings", "ffi", "code-generation", "csharp"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/Cysharp/csbindgen/"
repository = "https://github.com/Cysharp/csbindgen/"

[dependencies]
syn = { version = "1.0.109", features = ["full"] }