[package]
name = "csbindgen"
version = "1.9.3"
edition = "2021"
authors = ["Yoshifumi Kawai <ils@neue.cc>", "Cysharp, Inc."]
description = "Generate C# FFI from Rust for automatically brings native code and C native library to .NET and Unity."
keywords = ["bindings", "ffi", "code-generation", "csharp"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/Cysharp/csbindgen/"
repository = "https://github.com/Cysharp/csbindgen/"

[dependencies]
syn = { version = "2.0.68", features = ["full", "parsing"] }
regex = "1.10.5"
convert_case = "0.6.0"
